Simple flexible markup merge

--- a/src/AppBundle/Resources/public/include/header_authorized.html
+++ b/src/AppBundle/Resources/public/include/header_authorized.html
@@ -26,7 +26,7 @@
             <input type="text" placeholder="Поиск" class="search__input form-control"/>
             <input type="submit" value="" class="search__button"/>
           </form>
-        </div>
+        </div><a href="#login" class="header-table__item link-login fancybox hidden"><span>Войти </span></a><a href="#" class="header-table__item link-registr hidden"><span>Регистрация</span></a>
         <div data-target="#nav-profile" class="header-table__item mini-profile js-link-open active"><a href="#" class="mini-profile__img"><img src="img/user.png" alt=""/></a><a href="#" class="mini-profile__link"> <span class="arrow-down mini-profile__link-login-wrapper"><span class="mini-profile__link-login-name">Иванов Алексей</span><span class="ic ic_models-two"></span></span></a></div>
       </div>
       <div id="nav" class="navigation js-open-block">
@@ -152,7 +152,7 @@
           </div>
         </div>
       </div>
-      <div id="nav-profile" class="nav-profile js-open-block">
+      <div id="nav-profile" style="display: block;" class="nav-profile js-open-block js-open-block-noclose">
         <div class="nav-profile-wrap">
           <div class="nav-profile__item nav-profile__item_loaded">
             <div class="nav-profile__title"><a href="#">Загруженные модели</a></div>
