--- a/src/AppBundle/Resources/public/include/footer.html
+++ b/src/AppBundle/Resources/public/include/footer.html
@@ -5,7 +5,7 @@
     <div class="footer-wrapper">
       <div class="footer__item col-1">
         <h4 class="footer__title">Кратко о SYM</h4>
-        <p class="mt7">SYM- это торговая площадка, где вы можете покупать и <br> продавать 3D модели, текстуры, плагины для различных <br> проектов. Наш магазин начал свою работу в Феврале 2004 <br> года, и сегодня мы являемся одним из крупнейших поставщиков 3D контента в мире. У нас только качественные 3D <br> модели!</p>
+        <p class="mt7">SYM- это торговая площадка, где вы можете покупать и продавать 3D модели, текстуры, плагины для различных проектов. Наш магазин начал свою работу в Феврале 2004 года, и сегодня мы являемся одним из крупнейших поставщиков 3D контента в мире. У нас только качественные 3D модели!</p>
       </div>
       <div class="footer__item col-2">
         <h4 class="footer__title">О проекте</h4>
