--- a/src/AppBundle/Resources/public/include/templates.html
+++ b/src/AppBundle/Resources/public/include/templates.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>SELLYOURMODELS - Главная</title>
-    <link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css?1506867129938">
-    <link rel="stylesheet" type="text/css" href="/css/jquery.rating.css?1506867129938">
-    <link rel="stylesheet" type="text/css" href="/css/style.css?1506867129938">
-    <!-- [if lt IE 9]--><script src="/js/html5.js?1506867129938"></script>
+    <link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/jquery.rating.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <!-- [if lt IE 9]--><script src="/js/html5.js"></script>
     <!-- [endif]		-->
   </head>
   <body>
-    <script type="text/javascript" src="/js/libs.min.js?1506867129938"></script>
-    <script type="text/javascript" src="/js/custom.js?1506867129938"></script>
+    <script type="text/javascript" src="/js/libs.min.js"></script>
+    <script type="text/javascript" src="/js/custom.js"></script>
   </body>
 </html>
