--- a/src/AppBundle/Resources/views/Admin/field-up-down_product.html.twig
+++ b/src/AppBundle/Resources/views/Admin/field-up-down_product.html.twig
@@ -3,10 +3,10 @@
 {% block field %}
     {% spaceless %}
         <a href="{{ path('admin_app_product_up', {'id': object.id}) }}">
-            <img src="{{ asset('bundles/app/images-admin/arrow_up.png') }}" alt="{% trans %}Вверх{% endtrans %}" />
+            <img src="{{ asset('bundles/app/images-admin/arrow_up.png') }}" alt="{% trans %}arrow_up{% endtrans %}" />
         </a>
         <a href="{{ path('admin_app_product_down', {'id': object.id}) }}">
-            <img src="{{ asset('bundles/app/images-admin/arrow_down.png') }}" alt="{% trans %}Вниз{% endtrans %}" />
+            <img src="{{ asset('bundles/app/images-admin/arrow_down.png') }}" alt="{% trans %}arrow_down{% endtrans %}" />
         </a>
     {% endspaceless %}
 {% endblock %}
