I18n to category_list

--- a/src/AppBundle/Resources/views/Admin/category_list.html.twig
+++ b/src/AppBundle/Resources/views/Admin/category_list.html.twig
@@ -78,7 +78,7 @@
             <div class="sonata-ba-list col-md-12 wp-catalog-categories">
                 <div class="box box-primary">
                     <div class="box-header">
-                        <h4 class="box-title">Разделы каталога</h4>
+                        <h4 class="box-title">{% trans %}catalog_sections{% endtrans %}</h4>
                     </div>
 
                     <div class="box-body">
