I18n to Articles index

--- a/src/AppBundle/Resources/views/Article/index.html.twig
+++ b/src/AppBundle/Resources/views/Article/index.html.twig
@@ -1,10 +1,10 @@
 {% extends 'AppBundle::_inside.html.twig' %}
 
-{% block title %}Статьи{% endblock %}
+{% block title %}{% trans %}articles{% endtrans %}{% endblock %}
 
 {% block content %}
     <div class="text-page">
-        <h1>Статьи</h1>
+        <h1>{% trans %}articles{% endtrans %}</h1>
         <div class="b-news">
             {% if articles|length > 0 %}
                 {% for e in articles %}
@@ -18,12 +18,12 @@
                             <div class="preview">
                                 {{ e.preview|nl2br }}
                             </div>
-                            <a href="{{ path('articles_item',{id:e.id}) }}">Подробнее</a>
+                            <a href="{{ path('articles_item',{id:e.id}) }}">{% trans %}learn_more{% endtrans %}</a>
                         </div>
                     </div>
                 {% endfor %}
             {% else %}
-                <p>Материалов не найдено.</p>
+                <p>{% trans %}no_items_found{% endtrans %}.</p>
             {% endif %}
         </div>
     </div>
