Add I18n to Cabinet buy #STEP1 - TEST

--- a/src/AppBundle/Resources/views/Cabinet/buy.html.twig
+++ b/src/AppBundle/Resources/views/Cabinet/buy.html.twig
@@ -2,28 +2,15 @@
 
 {% block content %}
     <div class="main-wrap__header">
-        <h1>Покупка моделей</h1>
+        <h1>{% trans %}{{ buying_models }}{% endtrans %}</h1>
     </div>
     <div class="wrap">
         <div class="wrap-right">
-            <h4 class="wrap__title">Полезная информация</h4>
+            <h4 class="wrap__title">{% trans %}helpful_information{% endtrans %}</h4>
             <ol class="list">
-                <li>Минимальное колличество покупки - 2 PRO.</li>
-                <li>PRO начисляется единовременно и не имеет ограничения во времени скачивания.</li>
-                <li>30 FREE начисляется каждый день в рамках оплаченного срока.</li>
-                <li>При оплате через терминалы и другие оффлайн способы - срок получения доступа может
-                    достигать 3-х дней.
-                </li>
-                <li>Оплата с помощью банковской карты - только для стран СНГ.</li>
-                <li>Оплата через терминалы - только для России.</li>
-                <li>В случае утери pro-модели или неудачном скачаивании - восстановить её в истории
-                    покупок.
-                </li>
-                <li>Если у вас уже есть PRO-доступы - последуюшая покупка суммируется.</li>
-                <li>Для корпоративных клиентов. Минимальный заказ 1000 доступов PROFI. Оформление договора и
-                    безналичный расчет. Для уточнения деталей обращайтесь в службу поддержки.
-                </li>
-                <li>Служба поддержки. При обращении обязательно указывайте номер заказа!</li>
+                {% for healpful_line in cabinet_buy['healful_info']|keys %}
+                    <li>{{ cabinet_buy['healful_info'][healpful_line]|trans|raw }}</li>
+                {% endfor %}
             </ol>
         </div>
         <div class="wrap-left">
