--- a/src/AppBundle/Resources/views/Cabinet/buy.html.twig
+++ b/src/AppBundle/Resources/views/Cabinet/buy.html.twig
@@ -2,57 +2,50 @@
 
 {% block content %}
     <div class="main-wrap__header">
-        <h1>Покупка моделей</h1>
+        <h1>{% trans %}{{ buying_models }}{% endtrans %}</h1>
     </div>
     <div class="wrap">
         <div class="wrap-right">
-            <h4 class="wrap__title">Полезная информация</h4>
+            <h4 class="wrap__title">{% trans %}helpful_information{% endtrans %}</h4>
             <ol class="list">
-                <li>Минимальное колличество покупки - 2 PRO.</li>
-                <li>PRO начисляется единовременно и не имеет ограничения во времени скачивания.</li>
-                <li>30 FREE начисляется каждый день в рамках оплаченного срока.</li>
-                <li>При оплате через терминалы и другие оффлайн способы - срок получения доступа может
-                    достигать 3-х дней.
-                </li>
-                <li>Оплата с помощью банковской карты - только для стран СНГ.</li>
-                <li>Оплата через терминалы - только для России.</li>
-                <li>В случае утери pro-модели или неудачном скачаивании - восстановить её в истории
-                    покупок.
-                </li>
-                <li>Если у вас уже есть PRO-доступы - последуюшая покупка суммируется.</li>
-                <li>Для корпоративных клиентов. Минимальный заказ 1000 доступов PROFI. Оформление договора и
-                    безналичный расчет. Для уточнения деталей обращайтесь в службу поддержки.
-                </li>
-                <li>Служба поддержки. При обращении обязательно указывайте номер заказа!</li>
+                <li>{% trans %}cabinet_buy_healful_info_l1{% endtrans %}</li>
+                <li>{% trans %}cabinet_buy_healful_info_l2{% endtrans %}</li>
+                <li>{% trans %}cabinet_buy_healful_info_l3{% endtrans %}</li>
+                <li>{% trans %}cabinet_buy_healful_info_l4{% endtrans %}</li>
+                <li>{% trans %}cabinet_buy_healful_info_l5{% endtrans %}</li>
+                <li>{% trans %}cabinet_buy_healful_info_l6{% endtrans %}</li>
+                <li>{% trans %}cabinet_buy_healful_info_l7{% endtrans %}</li>
+                <li>{% trans %}cabinet_buy_healful_info_l8{% endtrans %}</li>
+                <li>{% trans %}cabinet_buy_healful_info_l9{% endtrans %}</li>
+                <li>{% trans %}cabinet_buy_healful_info_l10{% endtrans %}</li>
             </ol>
         </div>
         <div class="wrap-left">
-            <p>Хотите делать покупки гораздо быстрей? Купите предоплачиваемые Кредиты и скачивайте товары по
-                одному клику! <br> Сколько Кредитов вы хотите купить?</p>
-            <p>Депозит производится в $USD долларах и не подлежит возврату. Купленные Кредиты вы сможете
-                использовать только для покупки товаров в сети магазинов NetrinoMedia!</p>
+            <p>{% trans %}cabinet_buy_left_info_l1{% endtrans %}</p>
+            <p>{% trans %}cabinet_buy_left_info_l2{% endtrans %}</p>
+            
             <div class="box-form payment">
                 <form action="#">
                     <dl class="box-label">
-                        <dt class="box-label__title">Доступно 3d моделей</dt>
+                        <dt class="box-label__title">{% trans %}available_3d_models{% endtrans %}</dt>
                         <dd class="box-label__cont">{{ app.user.models }}</dd>
-                        <dt class="box-label__title mb25">Выберите количество покупаемых 3d моделей:</dt>
+                        <dt class="box-label__title mb25">{% trans %}select_number_purchased{% endtrans %}:</dt>
                         <dd class="box-label__cont mb25">
                             <input type="text" value="10" class="box-label__input js-buy-count" onchange="setBuyCount({{ settings.modelPrice }});" />
                         </dd>
-                        <dt class="box-label__title mb25">Сумма заказа:</dt>
-                        <dd class="box-label__cont mb25"><span class="count js-buy-count">{{ 10 * settings.modelPrice }}</span> руб.</dd>
+                        <dt class="box-label__title mb25">{% trans %}order_price{% endtrans %}:</dt>
+                        <dd class="box-label__cont mb25"><span class="count js-buy-count">{{ 10 * settings.modelPrice }}</span> {% trans %}currency_rub{% endtrans %}.</dd>
                     </dl>
                     <div class="box-field checkbox mb20">
                         <div class="box-field__input">
                             <input type="checkbox" id="buy-rules" class="styler" />
                             <label for="buy-rules" class="box-field__label">
-                                Я согласен с
-                                <a href="{{ path('page_7') }}" target="_blank" class="link">пользовательским соглашением</a>
+                                {% trans %}i_agree_with{% endtrans %}
+                                <a href="{{ path('page_7') }}" target="_blank" class="link">{% trans %}user_agreement{% endtrans %}</a>
                             </label>
                         </div>
                     </div>
-                    <button type="button" class="button button_warning" onclick="buyModels();return false;">Купить</button>
+                    <button type="button" class="button button_warning" onclick="buyModels();return false;">{% trans %}buy{% endtrans %}</button>
                     <span class="help-text inline settings__result js-buy-models-result"></span>
                     {#<h4 class="box-form__title">Выберите способ оплаты</h4
                     <div class="payment__button-group">
