Баннеры на главной

--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -962,6 +962,73 @@ input[type='button'].styler[disabled], input[type='submit'].styler[disabled] {
     transform: scale(1.2);
     background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAAKCAYAAABi8KSDAAAAPUlEQVQoU2NkYGD4zwABjFAaGwVWA1OATwNcDtk0bBpQxNCtRpbE0IzNnTBFGP6gSDHRziDag0QHHdGRAgDpJxIJHTijBwAAAABJRU5ErkJggg=="); } }
 
+/* BEM */
+/* ================================================ */
+.banners-main {
+  position: absolute;
+  top: 100%;
+  left: 10px;
+  right: 10px;
+  border-top: 1px solid #e5e5e5;
+  background-color: #f7f7f7;
+  z-index: 15; }
+  .banners-main__item {
+    position: relative;
+    display: block;
+    float: left;
+    width: 397px;
+    height: 120px;
+    font-size: 18px;
+    text-align: center;
+    color: #fff;
+    border-right: 1px solid #e5e5e5;
+    background-color: #b9b9b9;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    background-position: 50% 50%;
+    cursor: pointer; }
+  .banners-main__item:last-child {
+    width: 396px;
+    border-right: 0; }
+  .banners-main__item:hover {
+    background: #8d8d8d; }
+  .banners-main__icon {
+    position: relative;
+    z-index: 10;
+    margin-top: 20px;
+    height: 32px; }
+  .banners-main__name {
+    position: relative;
+    z-index: 10;
+    margin-top: 8px;
+    font-size: 18px;
+    color: #fff;
+    text-transform: uppercase; }
+  .banners-main__info {
+    position: relative;
+    z-index: 10;
+    margin-top: 3px;
+    font-size: 15px;
+    color: #fff; }
+  .banners-main__mask {
+    display: none;
+    position: absolute;
+    z-index: 5;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.36); }
+  .banners-main__item:hover .banners-main__mask {
+    display: block; }
+
+.fixed .banners-main {
+  display: none; }
+
+/* OTHER */
+/* ================================================ */
 /* 3. MAIN STYLES */
 /* ================================================ */
 body.fixed-header {
