Фикс загрывающего блока trans

--- a/src/AppBundle/Resources/views/Catalog/add.html.twig
+++ b/src/AppBundle/Resources/views/Catalog/add.html.twig
@@ -73,7 +73,7 @@
                         </div>
                     </div>
                     <div class="box-field col-5">
-                        <label class="box-field__label">{% trans %}model_po{% endtrans %}{% trans %}</label>
+                        <label class="box-field__label">{% trans %}model_po{% endtrans %}</label>
                         <div class="box-field__input">
                             <select name="software[]" multiple class="select2 form-control">
                                 {% for e in software %}
