--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>{% block title %}SYM покупайте и продавайте 3D модели{% endblock %} | SellYourModel</title>
-    <!--link(rel="apple-touch-icon", href="apple-touch-icon.png")-->
-    <!--Place favicon.ico in the root directory-->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
 
     {% stylesheets
     'bundles/app/css/style.css'
