Временное отключение проверки reCaptcha

--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -37,12 +37,12 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="box-field login-fields captcha login-registration__captcha">
-                            <label class="box-field__label">{% trans %}registration_captcha{% endtrans %}</label>
-                            <div class="box-field__input">
-                                <div class="g-recaptcha" data-sitekey="6LdrISYUAAAAAAzaB7Nm4xys2M8CZK81QebXWmN_"></div>
-                            </div>
-                        </div>
+                        {#<div class="box-field login-fields captcha login-registration__captcha">#}
+                            {#<label class="box-field__label">{% trans %}registration_captcha{% endtrans %}</label>#}
+                            {#<div class="box-field__input">#}
+                                {#<div class="g-recaptcha" data-sitekey="6LdrISYUAAAAAAzaB7Nm4xys2M8CZK81QebXWmN_"></div>#}
+                            {#</div>#}
+                        {#</div>#}
                         <div class="box-field login-fields checkbox nowrap">
                             <div class="box-field__input">
                                 <input type="checkbox" id="check_1" name="user_agreement" value="1" class="styler">
