--- a/src/AppBundle/Resources/views/Registration/index.html.twig
+++ b/src/AppBundle/Resources/views/Registration/index.html.twig
@@ -52,12 +52,12 @@
                                 <input type="password" name="password_repeat" class="form-control js-required">
                             </div>
                         </div>
-                        <div class="box-field captcha">
-                            <label class="box-field__label">{% trans %}registration_captcha{% endtrans %}</label>
-                            <div class="box-field__input">
-                                <div class="g-recaptcha" data-sitekey="6LdrISYUAAAAAAzaB7Nm4xys2M8CZK81QebXWmN_"></div>
-                            </div>
-                        </div>
+                        {#<div class="box-field captcha">#}
+                            {#<label class="box-field__label">{% trans %}registration_captcha{% endtrans %}</label>#}
+                            {#<div class="box-field__input">#}
+                                {#<div class="g-recaptcha" data-sitekey="6LdrISYUAAAAAAzaB7Nm4xys2M8CZK81QebXWmN_"></div>#}
+                            {#</div>#}
+                        {#</div>#}
                         <div class="box-field checkbox nowrap">
                             <div class="box-field__input">
                                 <input type="checkbox" id="check_1" class="styler">
