--- a/src/AppBundle/Resources/views/Registration/index.html.twig
+++ b/src/AppBundle/Resources/views/Registration/index.html.twig
@@ -81,7 +81,7 @@
                             <a href="{{ hwi_oauth_login_url('vkontakte') }}" class="social-wrap__link vk"><i class="fa fa-vk"></i></a>
                         </li>
                         <li class="social-wrap__item">
-                            <a href="#" class="social-wrap__link gp"><i class="fa fa-google-plus"></i></a>
+                            <a href="{{ hwi_oauth_login_url('google') }}" class="social-wrap__link gp"><i class="fa fa-google-plus"></i></a>
                         </li>
                     </ul>
                 </div>
