--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -94,7 +94,7 @@
                     <ul class="social-wrap unstyled">
                         <li class="social-wrap__item"> <a href="{{ hwi_oauth_login_url('facebook') }}" class="social-wrap__link fb"><i class="fa fa-facebook"></i></a></li>
                         <li class="social-wrap__item"> <a href="{{ hwi_oauth_login_url('vkontakte') }}" class="social-wrap__link vk"><i class="fa fa-vk"></i></a></li>
-                        <li class="social-wrap__item"> <a href="#" class="social-wrap__link gp"><i class="fa fa-google-plus"></i></a></li>
+                        <li class="social-wrap__item"> <a href="{{ hwi_oauth_login_url('google') }}" class="social-wrap__link gp"><i class="fa fa-google-plus"></i></a></li>
                     </ul>
                 </div>
             </div>
