Отображение причины блокировки "без причины" если модель заблокирована без указания причины.

--- a/src/AppBundle/Resources/views/Catalog/_model_info.html.twig
+++ b/src/AppBundle/Resources/views/Catalog/_model_info.html.twig
@@ -5,7 +5,7 @@
     {% else %}
         {% if product.block %}
             {% if app.user==product.user or is_granted('ROLE_SUPER_ADMIN') %}
-                {% trans %}model_blocked_by_reason{% endtrans %} <strong>{{ product.blockReason }}</strong>.
+                {% trans %}model_blocked_by_reason{% endtrans %} <strong>{% if product.blockReason %}{{ product.blockReason }}{% else %}{% trans %}without_reason{% endtrans %}{% endif %}</strong>.
             {% endif %}
         {% else %}
             {% if product.moderated %}
