--- a/src/AppBundle/Resources/views/Catalog/category.html.twig
+++ b/src/AppBundle/Resources/views/Catalog/category.html.twig
@@ -1,6 +1,6 @@
 {% extends 'AppBundle::_inside.html.twig' %}
 
-{% block title %}{{ category.name }}{% endblock %}
+{% block title %}{{ category.nameLocale }}{% endblock %}
 
 {% block wrapper_class %}catalog{% endblock %}
 
@@ -30,15 +30,15 @@
                     </select>
                 </div>#}
                 {% if category.parent %}
-                    <h1><a href="{{ path('catalog_category',{alias:category.parent.alias}) }}" class="link link_warning">{{ category.parent.name }}</a> <span class="text-warning devider">/</span> {{ category.name }}</h1>
+                    <h1><a href="{{ path('catalog_category',{alias:category.parent.alias}) }}" class="link link_warning">{{ category.parent.nameLocale }}</a> <span class="text-warning devider">/</span> {{ category.nameLocale }}</h1>
                 {% else %}
-                    <h1>{{ category.name }}</h1>
+                    <h1>{{ category.nameLocale }}</h1>
                 {% endif %}
             </div>
             {% if category.parent is null and category.children|length > 0 %}
                 <div class="sub-cats">
                     {% for e in category.children %}
-                        <a class="sub-cats__item" href="{{ path('catalog_category',{alias:e.alias}) }}">{{ e.name }}</a>
+                        <a class="sub-cats__item" href="{{ path('catalog_category',{alias:e.alias}) }}">{{ e.nameLocale }}</a>
                     {% endfor %}
                 </div>
             {% endif %}
