Боевой режим для ЯК

--- a/src/AppBundle/Resources/views/Cabinet/buyOrder.html.twig
+++ b/src/AppBundle/Resources/views/Cabinet/buyOrder.html.twig
@@ -10,9 +10,9 @@
         </div>
         <div class="wrap-left">
             <p>{% trans %}buy_form_redirect{% endtrans %}</p>
-            <form action="https://demomoney.yandex.ru/eshop.xml" method="post" class="js-ya-form">
+            <form action="https://money.yandex.ru/eshop.xml" method="post" class="js-ya-form">
                 <input name="shopId" value="129835" type="hidden"/>
-                <input name="scid" value="551245" type="hidden"/>
+                <input name="scid" value="94987" type="hidden"/>
                 <input name="sum" value="{{ entity.price }}" type="hidden">
                 <input name="customerNumber" value="user{{ app.user.id }}" type="hidden"/>
                 <input name="paymentType" value="" type="hidden"/>
