--- a/src/AppBundle/Resources/views/Catalog/add.html.twig
+++ b/src/AppBundle/Resources/views/Catalog/add.html.twig
@@ -15,15 +15,17 @@
                 <form action="{{ path('catalog_add_write') }}" class="js-add-model-form" method="POST">
                     <div class="box-field-group">
                         <div class="box-field col-5">
-                            <label class="box-field__label">{% trans %}model_name{% endtrans %} <span class="require-field-z">*</span></label>
+                            <label class="box-field__label">{% trans %}model_name{% endtrans %}
+                                <span class="require-field-z">*</span></label>
                             <div class="box-field__input">
-                                <input type="text" name="name" class="form-control" />
+                                <input type="text" name="name" class="form-control"/>
                             </div>
                         </div>
                     </div>
                     <div class="box-field-group">
                         <div class="box-field col-5">
-                            <label class="box-field__label">{% trans %}category{% endtrans %} <span class="require-field-z">*</span></label>
+                            <label class="box-field__label">{% trans %}category{% endtrans %}
+                                <span class="require-field-z">*</span></label>
                             <div class="box-field__input">
                                 <select name="category" data-placeholder=" " class="styler form-control">
                                     <option value=""></option>
@@ -37,26 +39,26 @@
                         </div>
                     </div>
                     <div class="box-field-group user js-image-wrapper js-main-image-drop">
-                        <label class="box-field__label">{% trans %}model_cover{% endtrans %} <span class="require-field-z">*</span></label>
+                        <label class="box-field__label">{% trans %}model_cover{% endtrans %}
+                            <span class="require-field-z">*</span></label>
                         <div class="box-field__input js-image-add-input">
-                            <input type="file" id="fileuploadMainImage" data-placeholder="{% trans %}file_not_select{% endtrans %}" data-browse="{% trans %}upload_file{% endtrans %}"
-                                   class="styler">
+                            <input type="file" id="fileuploadMainImage" data-placeholder="{% trans %}file_not_select{% endtrans %}" data-browse="{% trans %}upload_file{% endtrans %}" class="styler">
                         </div>
                         <div class="model-files js-main-pic"></div>
                     </div>
                     <div class="box-field-group user js-image-wrapper js-add-image-drop">
-                        <label class="box-field__label">{% trans %}model_custom_images{% endtrans %} <span class="require-field-z">*</span></label>
+                        <label class="box-field__label">{% trans %}model_custom_images{% endtrans %}
+                            <span class="require-field-z">*</span></label>
                         <div class="box-field__input js-add-pic-input">
-                            <input type="file" id="fileuploadAddImages" data-placeholder="{% trans %}file_not_select{% endtrans %}" data-browse="{% trans %}upload_file{% endtrans %}"
-                                   class="styler">
+                            <input type="file" id="fileuploadAddImages" data-placeholder="{% trans %}file_not_select{% endtrans %}" data-browse="{% trans %}upload_file{% endtrans %}" class="styler">
                         </div>
                         <div class="model-files js-add-pic"></div>
                     </div>
                     <div class="box-field-group user js-image-wrapper js-files-drop">
-                        <label class="box-field__label">{% trans %}model_files{% endtrans %} <span class="require-field-z">*</span></label>
-                        <div class="box-field__input">
-                            <input type="file" id="fileupload" data-placeholder="{% trans %}file_not_select{% endtrans %}" data-browse="{% trans %}upload_file{% endtrans %}"
-                                   class="styler">
+                        <label class="box-field__label">{% trans %}model_files{% endtrans %}
+                            <span class="require-field-z">*</span></label>
+                        <div class="box-field__input jq-file__no-show">
+                            <input type="file" id="fileupload" data-placeholder="" data-browse="{% trans %}upload_file{% endtrans %}" class="styler">
                         </div>
                         <div class="model-files js-model-files"></div>
                     </div>
@@ -64,7 +66,7 @@
                         <div class="box-field col-5">
                             <label class="box-field__label">{% trans %}model_manufacturer{% endtrans %}</label>
                             <div class="box-field__input">
-                                <input type="text" name="manufacturer" class="form-control" />
+                                <input type="text" name="manufacturer" class="form-control"/>
                             </div>
                         </div>
                     </div>
@@ -103,7 +105,8 @@
                     <div class="box-field login-fields checkbox nowrap">
                         <div class="box-field__input">
                             <input type="checkbox" id="check_2" name="user_agreement" value="1" class="styler">
-                            <label for="check_2" class="nowrap box-field__label">{% trans %}i_agree_with{% endtrans %} <a href="{{ path('page_7') }}" target="_blank" class="link">{% trans %}agent_agreement{% endtrans %}</a></label>
+                            <label for="check_2" class="nowrap box-field__label">{% trans %}i_agree_with{% endtrans %}
+                                <a href="{{ path('page_7') }}" target="_blank" class="link">{% trans %}agent_agreement{% endtrans %}</a></label>
                         </div>
                     </div>
                     <button type="submit" class="button button_warning js-add-model-btn" onclick="addModel();return false;">{% trans %}model_add{% endtrans %}</button>
@@ -121,15 +124,15 @@
             $('#fileuploadMainImage').fileupload({
                 url: '{{ oneup_uploader_endpoint('images') }}',
                 dropZone: $(".js-main-image-drop"),
-                formData: { type:'mainImg' },
+                formData: {type: 'mainImg'},
                 dataType: 'json',
                 loadImageFileTypes: '/^image\/(gif|jpeg|png)$/',
                 sequentialUploads: true,
                 done: function (e, data) {
-                    if(data.result.wp_error){
+                    if (data.result.wp_error) {
                         alert(data.result.wp_error_text);
                     }
-                    else{
+                    else {
                         var wrapper = $(e.target).closest('.js-image-wrapper');
                         wrapper.find('.js-main-pic').append(data.result.wp_container);
                         wrapper.find('.js-image-add-input').slideUp();
@@ -144,15 +147,15 @@
             $('#fileuploadAddImages').fileupload({
                 url: '{{ oneup_uploader_endpoint('images') }}',
                 dropZone: $(".js-add-image-drop"),
-                formData: { type:'addImg' },
+                formData: {type: 'addImg'},
                 dataType: 'json',
                 loadImageFileTypes: '/^image\/(gif|jpeg|png)$/',
                 sequentialUploads: true,
                 done: function (e, data) {
-                    if(data.result.wp_error){
+                    if (data.result.wp_error) {
                         alert(data.result.wp_error_text);
                     }
-                    else{
+                    else {
                         var wrapper = $(e.target).closest('.js-image-wrapper');
                         wrapper.find('.js-add-pic').append(data.result.wp_container);
                     }
@@ -166,15 +169,15 @@
             $('#fileupload').fileupload({
                 url: '{{ oneup_uploader_endpoint('images') }}',
                 dropZone: $(".js-files-drop"),
-                formData: { type:'files' },
+                formData: {type: 'files'},
                 dataType: 'json',
                 loadImageFileTypes: '/^image\/(gif|jpeg|png)$/',
                 sequentialUploads: true,
                 done: function (e, data) {
-                    if(data.result.wp_error){
+                    if (data.result.wp_error) {
                         alert(data.result.wp_error_text);
                     }
-                    else{
+                    else {
                         var wrapper = $(e.target).closest('.js-image-wrapper');
                         wrapper.find('.js-model-files').append(data.result.wp_container);
                     }
