--- a/src/AppBundle/Resources/views/Catalog/add.html.twig
+++ b/src/AppBundle/Resources/views/Catalog/add.html.twig
@@ -41,18 +41,27 @@
                     <div class="box-field-group user js-image-wrapper js-main-image-drop">
                         <label class="box-field__label">{% trans %}model_cover{% endtrans %}
                             <span class="require-field-z">*</span></label>
-                        <div class="box-field__input js-image-add-input">
-                            <input type="file" id="fileuploadMainImage" data-placeholder="{% trans %}file_not_select{% endtrans %}" data-browse="{% trans %}upload_file{% endtrans %}" class="styler">
+                        <div class="box-field__input">
+                            <div class="add-image js-image-add-input">
+                                <img src="{{ asset('bundles/app/img/btn-img-add.png') }}" class="add-image__img">
+                                <input type="file" id="fileuploadMainImage" class="add-image__input">
+                            </div>
+
                         </div>
                         <div class="model-files js-main-pic"></div>
                     </div>
                     <div class="box-field-group user js-image-wrapper js-add-image-drop">
                         <label class="box-field__label">{% trans %}model_custom_images{% endtrans %}
                             <span class="require-field-z">*</span></label>
-                        <div class="box-field__input js-add-pic-input">
-                            <input type="file" id="fileuploadAddImages" data-placeholder="{% trans %}file_not_select{% endtrans %}" data-browse="{% trans %}upload_file{% endtrans %}" class="styler">
+
+                        <div class="model-files">
+                            <div class="model-files__add-images js-add-pic"></div>
+                            <div class="add-image add-image--add-images js-add-pic-input">
+                                <img src="{{ asset('bundles/app/img/btn-img-add.png') }}" class="add-image__img">
+                                <input type="file" id="fileuploadAddImages" class="add-image__input">
+                            </div>
                         </div>
-                        <div class="model-files js-add-pic"></div>
+
                     </div>
                     <div class="box-field-group user js-image-wrapper js-files-drop">
                         <label class="box-field__label">{% trans %}model_files{% endtrans %}
@@ -135,7 +144,7 @@
                     else {
                         var wrapper = $(e.target).closest('.js-image-wrapper');
                         wrapper.find('.js-main-pic').append(data.result.wp_container);
-                        wrapper.find('.js-image-add-input').slideUp();
+                        wrapper.find('.js-image-add-input').hide();
                     }
                 },
                 progressall: function (e, data) {
