--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -45,7 +45,7 @@
                         <li class="nav-list__item"><a href="{{ path('page_2') }}" class="nav-list__link"><span>{% trans %}about{% endtrans %}</span></a></li>
                         <li class="nav-list__item"><a href="{{ path('page_3') }}" class="nav-list__link"><span>{% trans %}buy{% endtrans %}</span></a></li>
                         <li class="nav-list__item"><a href="{{ path('community') }}" class="nav-list__link"><span>{% trans %}community{% endtrans %}</span></a></li>
-                        <li class="nav-list__item"><a href="{{ path('page_12') }}" class="nav-list__link"><span>{% trans %}support{% endtrans %}</span></a></li>
+                        <li class="nav-list__item"><a href="{{ path('faq') }}" class="nav-list__link"><span>{% trans %}support{% endtrans %}</span></a></li>
                         <li class="nav-list__item">
                             {#<a href="#" data-target="#box-lang" class="nav-list__link arrow-down js-link-open">#}
                                 {#<span>{% trans %}language{% endtrans %}:</span>#}
@@ -143,7 +143,7 @@
                         <li class="footer-nav__item"><a href="{{ path('page_4') }}" class="footer-nav__link">{% trans %}about_sym_rules{% endtrans %}</a></li>
                         <li class="footer-nav__item"><a href="{{ path('community') }}" class="footer-nav__link">{% trans %}about_sym_community{% endtrans %}</a></li>
                         <li class="footer-nav__item"><a href="{{ path('page_5') }}" class="footer-nav__link">{% trans %}about_sym_adversting{% endtrans %}</a></li>
-                        <li class="footer-nav__item"><a href="{{ path('page_12') }}" class="footer-nav__link">{% trans %}about_sym_support{% endtrans %}</a></li>
+                        <li class="footer-nav__item"><a href="{{ path('faq') }}" class="footer-nav__link">{% trans %}about_sym_support{% endtrans %}</a></li>
                         {#<li class="footer-nav__item"><a href="#" class="footer-nav__link">{% trans %}about_sym_send_message{% endtrans %}</a></li>#}
                         <li class="footer-nav__item"><a href="{{ path('page_6') }}" class="footer-nav__link">{% trans %}about_sym_contacts{% endtrans %}</a></li>
                     </ul>
